2014-07-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.5 release procedure:
 	Changes since nco-4_4_4: https DAP, gxvx,
	cd ~/nco;cvs tag -d nco-4_4_5;cvs tag -d nco-4_4_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.5 release"
	cvs tag -c nco-4_4_5;cvs tag -c nco-4_4_5-1

	* Improve CF-compliance checking infrastructure for mabel/ICESat2

2014-06-17  Charlie Zender  <zender@uci.edu>

	* Implement i18n in ncks, extend to es and fr

2014-06-15  Charlie Zender  <zender@uci.edu>

	* Apply copyright notice changes to most source files

2014-06-13  Charlie Zender  <zender@uci.edu>

	* Update and streamline project homepage

2014-06-12  Charlie Zender  <zender@uci.edu>

	* Improve ncrename diagnostics, fix unset pointer de-reference

2014-06-11  Charlie Zender  <zender@uci.edu>

	* Document --grp_xtr_var_xcl

2014-06-10  Charlie Zender  <zender@uci.edu>

	* Utilize @verbatim environment in all nco.texi @examples

2014-06-06  Charlie Zender  <zender@uci.edu>

	* Improve NCO compliance with NASA Reuse-Readiness Levels (RRLs)
	Reorganize documentation on citation, authorship, copyright, and licensing

	* Document NARR example of SLD statistics

2014-06-05  Charlie Zender  <zender@uci.edu>

	* nc_set_log_level(nco_dbg_lvl) to quiet HDF logging messages for ncdismember

2014-06-04  Charlie Zender  <zender@uci.edu>

	* Add pnetCDF token stubs. Build pnetCDF-enabled netCDF4 in /usr/local/parallel.

	* Filenames that begin with https:// now trigger DAP access code path

2014-05-31  Charlie Zender  <zender@uci.edu>

	* Mac OS X compatibility with bld/Makefile complete. No	regressions!
	Using MacPorts netCDF 4.3.1, Xcode 5.1, GNU coreutils (for cut)

2014-05-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.4 release procedure:
 	Changes since nco-4_4_3: -x tolerance, --rad orphans, CERES, mmr, ncwa msk
	cd ~/nco;cvs tag -d nco-4_4_4;cvs tag -d nco-4_4_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.4 release"
	cvs tag -c nco-4_4_4;cvs tag -c nco-4_4_4-1
