@@ -1,4 +1,4 @@
-<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.908 2014-07-02 06:39:04 zender Exp $
+<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.909 2014-07-05 05:37:39 zender Exp $
 Purpose: NCO homepage
 
 URL:
@@ -330,7 +330,7 @@ influence of your monetary donations on NCO development:
 The National Aeronautics and Space Administration (NASA) Cooperative
 Agreement <a href="NNX14AH55A">NNX14AH55A</a>
 funds our
-<a href="http://dust.ess.uci.edu/prp/prp_access/prp_axs.pdf">project</a>,
+<a href="http://dust.ess.uci.edu/prp/prp_axs/prp_axs.pdf">project</a>,
 &ldquo;Easy Access to and Analysis of NASA and Model Swath-like Data&rdquo;
 from 20140701&ndash;20160630 as part of the 
 Advancing Collaborative Connections for Earth System Science 
