@@ -1,3 +1,7 @@
+2014-07-04  Charlie Zender  <zender@uci.edu>
+
+	* Build simply when PNETCDF=Y
+
 2014-07-01  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.5 release procedure:
